--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,8 +10,24 @@
 
 #main {
   padding: 20px;
-  display: flex;
-  flex-direction: right;
+  display: block;
+  align-content: center;
+}
+
+#description {
+  font-size: x-large;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 50px;
+
+}
+
+#quiz {
+  font-size: xx-large;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 20px;
+
 }
 
 #accordionList {
@@ -23,4 +39,11 @@
 #accordionList .accordion {
   margin-bottom: 10px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+p {
+  max-width: 750px;
+  text-align: center;
+  margin: auto;
+  font-size: large;
 }
