--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,12 @@
-
+#app {
+  background: rgb(229, 229, 229);
+  height: 100%;
+}
 #header {
   display: flex-end;
   align-content: center;
   padding: 20px;
-  background-color: #e6e6e6;
+  background-color: #d5d5d5;
   border-bottom: 1px solid #ccc;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -12,6 +15,7 @@
   padding: 20px;
   display: block;
   align-content: center;
+  height: 100%;
 }
 
 #description {
