--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,9 @@
 #app {
-  background: rgb(229, 229, 229);
   height: 100%;
+  font-family: 'Montserrat', sans-serif;
 }
 #header {
-  display: flex-end;
+  display: flex;
   align-content: center;
   padding: 20px;
   background-color: #d5d5d5;
@@ -22,7 +22,6 @@
   font-size: x-large;
   font-weight: 600;
   text-align: center;
-  margin-bottom: 50px;
 
 }
 
@@ -43,6 +42,7 @@
 #accordionList .accordion {
   margin-bottom: 10px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
 
 p {
