--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,53 +1,208 @@
+body {
+	background-color: rgb(3, 1, 13);
+}
+
+.swirlyBackground {
+	background: radial-gradient(
+		circle at top left,
+		#320303,
+		#050114,
+		#0d020e,
+		#1e0332
+	);
+	background-size: 200% 200%;
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
+	animation: swirl 15s ease infinite;
+}
+
+.swirlyBackground2 {
+	background: radial-gradient(
+		circle at top left,
+		#e0accb,
+		#cfbea5,
+		#c5acec,
+		#e9aed3
+	);
+	background-size: 200% 200%;
+	margin: 0;
+	padding: 0;
+	animation: swirl 15s ease infinite;
+}
+
+@keyframes swirl {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+.fadeIn {
+  animation: fadeIn 0.7s ease-in-out;
+}
+
+hr {
+  background-color: white !important;
+  height: 2px;
+  padding: auto;
+}
+
+.btn-primary {
+	background-color: #f3ec78;
+	background-image: linear-gradient(45deg, #f3ec78, #af4261);
+	background-size: 100%;
+	border-color: #20022db1;
+  color: #fff;
+  box-shadow: 0px 5px 25px rgba(200, 200, 200, .15);
+}
+
+.btn-primary:hover {
+	background-image: linear-gradient(45deg, #af42617e, #f3ed787b);
+	background-size: 100%;
+	border-color: #fff;
+}
+
+.btn-secondary {
+	background-color: rgb(45, 18, 77);
+	background-image: linear-gradient(45deg, #120a24b8, #20022db1);
+	background-size: 100%;
+}
+
+.btn-secondary:hover {
+  background-color: rgb(136, 136, 136);
+  background-image: linear-gradient(45deg, #9d77d5b8, #9ee3ff9e);
+	background-size: 100%;
+	border-color: #120a24;
+  color: #120a24;
+}
+.gradientText {
+	-webkit-text-fill-color: transparent;
+	background-image: linear-gradient(45deg, #f3ec78, #af4261);
+	background-size: 100%;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-text-fill-color: transparent;
+}
+
+.gradientText2 {
+  font-weight: 500;
+  background-image: radial-gradient(circle at top left,
+		#e0accb,
+		#cfbea5,
+		#c5acec,
+		#e9aed3);
+  -webkit-text-fill-color: transparent;
+	/* background-image: linear-gradient(45deg, #f3ec78, #af4261); */
+	background-size: 100%;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-text-fill-color: white;
+}
+a:hover {
+	-webkit-text-fill-color: transparent;
+	background-image: linear-gradient(45deg, #f3ec78, #af4261);
+	background-size: 100%;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-text-fill-color: transparent;
+  text-decoration: #f3ed787b wavy underline;
+}
+
+a {
+	-webkit-text-fill-color: transparent;
+	background-image: linear-gradient(45deg, #9d77d5b8, #9ee3ff9e);
+	background-size: 100%;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-text-fill-color: transparent;
+  text-decoration: #9d77d55e wavy underline;
+}
+
 #app {
-  height: 100%;
-  font-family: 'Montserrat', sans-serif;
+	height: auto;
+	font-family: 'Montserrat', sans-serif;
+	color: #ccc;
 }
 #header {
-  display: flex;
-  align-content: center;
-  padding: 20px;
-  background-color: #d5d5d5;
-  border-bottom: 1px solid #ccc;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+	color: rgb(3, 1, 13);
+	display: flex;
+	align-content: center;
+	padding: 20px;
+  background-color: rgb(190, 190, 190);
+	background-image: linear-gradient(45deg, #f3ed785c, #af426157);
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 #main {
-  padding: 20px;
-  display: block;
-  align-content: center;
-  height: 100%;
+	padding: 20px;
+	display: block;
+	align-content: center;
+	height: 100%;
 }
 
 #description {
-  font-size: x-large;
-  font-weight: 600;
-  text-align: center;
-
+	font-size: x-large;
+	font-weight: 600;
+	text-align: center;
 }
 
 #quiz {
-  font-size: xx-large;
-  font-weight: 700;
-  text-align: center;
-  margin-top: 20px;
-
+	font-size: xx-large;
+	font-weight: 700;
+	text-align: center;
+	margin-top: 20px;
 }
 
 #accordionList {
-  width: 90%;
-  max-width: 800px;
-  margin: auto
+	width: 90%;
+	max-width: 800px;
+	margin: auto;
 }
 
 #accordionList .accordion {
-  margin-bottom: 10px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
+	margin-bottom: 10px;
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
 }
 
 p {
-  max-width: 750px;
-  text-align: center;
-  margin: auto;
-  font-size: large;
+	max-width: 750px;
+	text-align: center;
+	margin: auto;
+	font-size: large;
+}
+
+.gradientText {
+	-webkit-text-fill-color: transparent;
+	background-color: #f3ec78;
+	background-image: linear-gradient(45deg, #f3ec78, #af4261);
+	background-size: 100%;
+	background-clip: text;
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-moz-text-fill-color: transparent;
+}
+
+test {
+  color: rgb(221, 221, 221)
 }
